# iiko_fastapi

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/src/: alembic.ini  main.py
backend/src/core/: dependencies.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2025_03_21_1558-b68efcfb48ff_test_migration.py  2025_03_22_2322-2841303c3dd3_added_model_user_and_test.py
backend/src/settings/: base_model.py  config.py  database.py
backend/src/test/: models.py
